use nifty new language features